@@ -11,6 +11,8 @@
 Version 4.5.1 (development)
 ===========================
 
+- Added a fast normalization-based distance solver, see
+  miniapps/shifted/distance.cpp.
 
 Version 4.5, released on October 22, 2022
 =========================================
